feat: add development Docker setup and enhanced environment configuration
- Add local development Docker Compose with PostgreSQL, pgAdmin, Redis, MinIO
- Update environment example with VPS Supabase configuration options
- Add support for both local and self-hosted Supabase instances
- Include database direct connection options for advanced usage
- Add comprehensive environment variable documentation
- Add development and production configuration examples

Development Setup:
- PostgreSQL 15 with automatic initialization
- pgAdmin for database management
- Redis for caching and sessions
- MinIO for S3-compatible local storage
- Automatic volume mounting for SQL scripts

Environment Configuration:
- Local development variables
- VPS self-hosted Supabase configuration
- Production domain and SSL settings
- Database connection options
- Security and authentication settings

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,3 +1,77 @@
+# =============================================================================
+# AVODAH EDUCA - ENVIRONMENT VARIABLES TEMPLATE
+# =============================================================================
+# Copy this file to .env.local and fill in your actual values
+
+# =============================================================================
+# SUPABASE CONFIGURATION
+# =============================================================================
+
+# Your Supabase project URL
+# Get this from: https://app.supabase.com/project/[your-project]/settings/api
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+
+# Your Supabase anon/public key
+# Get this from: https://app.supabase.com/project/[your-project]/settings/api
+NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Your Supabase service role key (keep this secret!)
+# Get this from: https://app.supabase.com/project/[your-project]/settings/api
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
+# =============================================================================
+# APPLICATION CONFIGURATION
+# =============================================================================
+
+# Application environment
+NODE_ENV=development
+
+# Base URL for the application (used for redirects, emails, etc.)
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+# =============================================================================
+# OPTIONAL CONFIGURATION
+# =============================================================================
+
+# Database direct URL (optional, for advanced usage)
+# SUPABASE_DB_URL=postgresql://postgres:password@db.your-project.supabase.co:5432/postgres
+
+# JWT Secret (optional, matches Supabase JWT secret)
+# SUPABASE_JWT_SECRET=your-jwt-secret
+
+# =============================================================================
+# DEVELOPMENT CONFIGURATION
+# =============================================================================
+
+# Enable debug logging in development
+DEBUG=false
+
+# Enable Supabase local development
+# NEXT_PUBLIC_SUPABASE_URL=http://localhost:54321
+# NEXT_PUBLIC_SUPABASE_ANON_KEY=your-local-anon-key
+
+# =============================================================================
+# PRODUCTION CONFIGURATION
+# =============================================================================
+
+# Production domain
+# NEXT_PUBLIC_APP_URL=https://yourdomain.com
+
+# Analytics (optional)
+# NEXT_PUBLIC_GOOGLE_ANALYTICS_ID=G-XXXXXXXXXX
+
+# =============================================================================
+# NOTES
+# =============================================================================
+# 
+# 1. Never commit .env.local to version control
+# 2. Keep SUPABASE_SERVICE_ROLE_KEY secret - it has admin access
+# 3. Use different projects for development/staging/production
+# 4. Set up proper CORS and domain restrictions in Supabase
+# 5. Enable 2FA on your Supabase account for security
+#
+# =============================================================================
+
 # Supabase Self-Hosted Configuration
 # Replace with your VPS Supabase instance URLs and keys
 
