security: remove hardcoded OAuth credentials from scripts
- Replace hardcoded Google OAuth credentials with environment variables
- Add .env.oauth.example template for secure credential management
- Update .gitignore to prevent OAuth credential commits
- Add credential validation and helpful error messages
- Add comprehensive setup instructions in script help sections

Security Improvements:
- No more hardcoded secrets in version control
- Proper environment variable pattern for sensitive data
- Clear instructions for secure credential setup
- Validation to prevent accidental usage with placeholder values

Usage:
1. Copy scripts/.env.oauth.example to scripts/.env.oauth
2. Edit .env.oauth with actual Google OAuth credentials
3. Source the file: source scripts/.env.oauth
4. Run OAuth configuration scripts

BREAKING CHANGE: OAuth scripts now require environment variables instead of hardcoded credentials

--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,12 @@ pids
 # dotenv environment variables file
 .env
 
+# OAuth credentials and secrets
+.env.oauth
+scripts/.env.oauth
+*.oauth
+*oauth.env
+
 # next.js build output
 .next
 
